--- a/CursoCompose/app/src/main/res/values/strings.xml
+++ b/CursoCompose/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CursoCompose</string>
+    <string name="hello_world">Hello World\n</string>
+    <string name="ola_mundo">Olá Mundo!</string>
+    <string name="foto_contato">Foto de contato</string>
 </resources>
